[package]
name = "auth_server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
actix-limitation = "0.5"
actix-session = "0.8"
actix-files = "0.6"
actix-rt = "2.2.0"
async-std = { version = "1", features = [ "attributes" ] }
clap = "3.0"
chrono = "0.4"
colored = "2.0"
cookie = "0.16.0"
env_logger = "0.9"
jsonwebtoken = "7.2"
log = "0.4"
openssl = "0.10"
rand = "0.8"
reqwest = "0.11"
rust-argon2 = "1.0.0"
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "postgres" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"]}
